--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,22 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
+			
+		<!-- Material Typography -->
+		<link rel="stylesheet" href="https://unpkg.com/@material/typography/dist/mdc.typography.css" />
+
+		<!-- SMUI Themes -->
+		<link rel="stylesheet" href="src/theme/smui.css" media="(prefers-color-scheme: light)" />
+		<link rel="stylesheet" href="src/theme/dark/smui-dark.css" media="screen and (prefers-color-scheme: dark)"/>
+		
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
